<resources>
    <string name="app_name">Mentor</string>
    <string name="intro_title">Doctors</string>
    <string name="intro_description">Find expert doctors for perticular problem  on one tap</string>
    <string name="intro_button_back_sign"><![CDATA[<]]></string>
    <string name="intro_button_next_sign"><![CDATA[>]]></string>
    <string name="intro_button_getting_started">Getting Started</string>

    <string name="edit_text_hint_email">E-mail</string>
    <string name="edit_text_hint_problem">Problem</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="edit_text_hint_confirm_password">Confirm Password</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_phone_number">Mobile Number</string>
    <string name="edit_text_hint_specialist_doctor">Specialist Doctor</string>
    <string name="edit_text_hint_current_location">Current Location</string>
    <string name="edit_text_hint_gender">Gender</string>

    <string name="button_text_log_in">Log In</string>
    <string name="button_text_reset_password">Reset Password</string>
    <string name="button_text_sign_up">Sign Up</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_search">Search</string>
    <string name="button_text_book_appointment">Book Appointment</string>
    <string name="button_text_home">HOME</string>
    <string name="button_text_favourite_doctors">Favourite Doctors</string>

    <string name="header_sign_in">Sign In</string>
    <string name="header_forgot_password">Forgot Password</string>
    <string name="header_find_doctor">Find Doctor</string>

    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="remember">Remember</string>
    <string name="dont_have_an_account">Dont\'t Have Account?</string>
    <string name="create_account">Create Account.</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="forget_password_message">We just need your register e-mail ID to send reset  link</string>

    <string name="menu_doctors">Doctors</string>
    <string name="menu_news">News</string>
    <string name="menu_my_appointments">Appointments</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="toolbar_doctors">Doctors</string>
    <string name="toolbar_doctor">Doctor</string>
    <string name="toolbar_review">Review</string>

    <string name="dollar_sign">$</string>

    <string name="doctor_call">Call</string>
    <string name="doctor_reviews">Reviews</string>
    <string name="doctor_photos">Photos</string>
    <string name="doctor_about">About</string>
    <string name="doctor_about_text">The Doctor races to return to Earth fearing that The Master will return. However, the Master turns everyone on Earth into his own image. Little does he realize the greater danger that awaits him?</string>


    <string name="calling">Calling...</string>


    <string name="review_user_name">Lina Rose</string>
    <string name="review_user_review">The Good Doctor would really like to make you feel good. And that\'s not always a good thing. ABC\'s new medical drama</string>
    <string name="review_date">(16-04-2019)</string>
    <string name="test_createAppointment_data">17 April 2019</string>
    <string name="test_createAppointment_time">17:00</string>
    <string name="toolbar_appointment_details">Appointment Details</string>
    <string name="toolbar_appointment">Appointment</string>
    <string name="create_appointment">Create an appointment</string>
    <string name="toolbar_book_appointment">Book Appointment</string>
    <string name="toolbar_user_profile">User Profile</string>
    <string name="user_profile_age">Age</string>
    <string name="user_profile_test_age">22</string>
    <string name="user_profile_age_subtext">years</string>
    <string name="user_profile_blood">Blood</string>
    <string name="user_profile_gender">Gender</string>
    <string name="user_profile_height">Height</string>
    <string name="user_profile_weight">Weight</string>
    <string name="toolbar_news">News</string>
    <string name="calender_header">April 2019</string>


    <string name="test_docors_list_name">Dr. Vivek Thakur</string>
    <string name="test_docors_list_specialist">Peditrician</string>
    <string name="test_docors_list_cost">4.5</string>

    <string name="test_news_title">What is Lorem Ipsum?</string>
    <string name="test_news">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.\n</string>
    <string name="toolbar_event_list">Event List</string>
    <string name="user_profile_test_blood">AB rh+</string>
    <string name="user_profile_test_gender">Male</string>
    <string name="balance">Balance</string>
    <string name="amount">250</string>
    <string name="button_text_deposit">Deposit</string>
    <string name="button_text_withdraw">Withdraw</string>
    <string name="msg_account_not_found">The username and password you entered did not match our records. Please double-check and try again.</string>
    <string name="error_message">An error has occured!</string>
    <string name="password_mismatch">Passwords does not match!</string>
    <string name="short_password">Password needs to be at least 6 character long</string>
    <string name="email_reset_message">Reset Email successfully has been sent</string>

    <!--to hide menu titles-->
    <string name="empty">" "</string>

    <string name="doctor_side_menuTitle_news">News</string>
    <string name="doctor_side_menuTitle_appointments">Appointments</string>
    <string name="doctor_side_menuTitle_profile">Profile</string>
    <string name="doctor_updateInformation">Update Information</string>
    <string name="doctorSide_appointment_date">04/05/19</string>
    <string name="doctorSide_appointment_time">23:00</string>
    <string name="dash">-</string>
    <string name="doctor_side_recyclerViewAppointmentItem_errorText">You cannot make the call to this patient now, please wait to the appointment date and time</string>

    <string-array name="user_details_gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="user_details_blood_array">
        <item> 0+</item>
        <item> A+</item>
        <item> B+</item>
        <item> AB+</item>
        <item> 0-</item>
        <item> A-</item>
        <item> B-</item>
        <item> AB-</item>
    </string-array>


</resources>
