<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/back_arrow" />

            <TextView
                style="@style/toolbar_title"
                android:text="@string/toolbar_appointment" />
        </RelativeLayout>


    </Toolbar>

    <!--Shadow-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/intro_shadow"
        android:orientation="horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_up_textView"
            style="@style/header_textView_style"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="50dp"
            android:text="@string/create_appointment"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/sign_up_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="105dp"

            android:divider="@drawable/divider2"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                style="@style/edit_text_style"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/gothamroundedbold"
                android:hint="@string/edit_text_hint_name"
                android:text="@string/test_docors_list_name"
                android:textColor="@color/colorMainBlue" />

            <EditText
                style="@style/edit_text_style"
                android:layout_height="150dp"
                android:gravity="start"
                android:hint="@string/edit_text_hint_problem"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <Button
                style="@style/button_style"
                android:text="@string/button_text_next" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>