<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_above="@id/forgot_password_textView"
        android:layout_marginBottom="35dp">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="55dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow_bold_gray" />
    </Toolbar>


    <TextView
        android:id="@+id/forgot_password_textView"
        style="@style/header_textView_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_up_linearLayout"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="10dp"
        android:text="@string/header_forgot_password"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/sign_up_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="332dp"

        android:divider="@drawable/divider2"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/forget_password_message" />

        <EditText
            style="@style/edit_text_style"
            android:hint="@string/edit_text_hint_email"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/button2"
            style="@style/button_style"
            android:text="@string/button_text_reset_password" />

    </LinearLayout>


</RelativeLayout>