<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorMainBlue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/back_arrow" />

            <TextView
                style="@style/toolbar_title"
                android:text="@string/toolbar_user_profile" />
        </RelativeLayout>


    </Toolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_calling">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_user_profile" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/doctor_imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:src="@drawable/test_doctor_1"
            app:civ_border_color="@color/colorLightGray2"
            app:civ_border_width="2dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_profile_username_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/gothamroundedbold"
                android:gravity="center"
                android:text="@string/test_docors_list_name"
                android:textColor="@color/colorMainBlue" />


            <LinearLayout
                android:id="@+id/user_profile_account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_profile_username_textview"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_empty"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_wallet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothamroundedbold"
                        android:text="@string/balance" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/dollar_sign" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/amount" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        style="@style/button_style"
                        android:layout_width="120dp"
                        android:layout_marginBottom="10dp"
                        android:height="30dp"
                        android:text="@string/button_text_deposit" />

                    <Button
                        style="@style/button_style"
                        android:layout_width="120dp"
                        android:width="30dp"
                        android:text="@string/button_text_withdraw" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_profile_account_balance"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:divider="@drawable/line_divider_horizontal"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:divider="@drawable/line_divider_vertical"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_age"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_test_age"
                            android:textColor="@color/colorLightGray4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_age_subtext"
                            android:textColor="@color/colorLightGray4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_blood"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_test_blood"
                            android:textColor="@color/colorLightGray4" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_gender"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamroundedbold"
                            android:text="@string/user_profile_test_gender"
                            android:textColor="@color/colorLightGray4" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <Button
                style="@style/button_style"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="60dp"
                android:text="@string/button_text_book_appointment" />


        </RelativeLayout>


    </FrameLayout>


</LinearLayout>